--- a/src/app/features/crm/components/activity-management/activities/activities.component.html
+++ b/src/app/features/crm/components/activity-management/activities/activities.component.html
@@ -46,7 +46,8 @@
             <span
               class="icon-circle"
               data-bs-toggle="modal"
-              data-bs-target="#deleteActivityModal"
+              data-bs-target="#deleteModal"
+              (click)="prepareItemForDelete('activity')"
             >
               <i class="fa-regular fa-trash-can"></i>
             </span>
@@ -120,7 +121,13 @@
           </ng-template>
         </p-table>
       </ng-container>
-      <ng-template #activitiesLoading> Loading... </ng-template>
+      <ng-template #activitiesLoading>
+        <div class="text-center">
+          <div class="spinner-border text-secondary" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+        </div>
+      </ng-template>
     </div>
   </div>
 
@@ -142,7 +149,12 @@
             <span class="icon-circle edit-note" (click)="editNote()">
               <i class="pi pi-pencil"></i>
             </span>
-            <span class="icon-circle">
+            <span
+              class="icon-circle"
+              data-bs-toggle="modal"
+              data-bs-target="#deleteModal"
+              (click)="prepareItemForDelete('note')"
+            >
               <i class="fa-regular fa-trash-can"></i>
             </span>
           </div>
@@ -199,7 +211,13 @@
           </ng-template>
         </p-table>
       </ng-container>
-      <ng-template #notesLoading> Loading... </ng-template>
+      <ng-template #notesLoading>
+        <div class="text-center">
+          <div class="spinner-border text-secondary" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+        </div>
+      </ng-template>
     </div>
   </div>
 
@@ -224,7 +242,8 @@
             <span
               class="icon-circle"
               data-bs-toggle="modal"
-              data-bs-target="#deleteActivityTaskModal"
+              data-bs-target="#deleteModal"
+              (click)="prepareItemForDelete('task')"
             >
               <i class="fa-regular fa-trash-can"></i>
             </span>
@@ -286,7 +305,13 @@
           </ng-template>
         </p-table>
       </ng-container>
-      <ng-template #tasksLoading> Loading... </ng-template>
+      <ng-template #tasksLoading>
+        <div class="text-center">
+          <div class="spinner-border text-secondary" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+        </div>
+      </ng-template>
     </div>
   </div>
 
@@ -300,10 +325,18 @@
         <div class="col-sm-12 col-md-6 d-flex justify-content-lg-end">
           <div class="float-end">
             <button class="btn btn-primary">Send invite</button>
-            <span class="icon-circle" (click)="openAllUsersModal()">
+            <span
+              class="icon-circle"
+              (click)="openAllUsersModal('participant')"
+            >
               <i class="fa-solid fa-plus open-all-users-modal"></i>
             </span>
-            <span class="icon-circle">
+            <span
+              class="icon-circle"
+              data-bs-toggle="modal"
+              data-bs-target="#deleteModal"
+              (click)="prepareItemForDelete('participant')"
+            >
               <i class="fa-regular fa-trash-can"></i>
             </span>
           </div>
@@ -355,7 +388,13 @@
           </ng-template>
         </p-table>
       </ng-container>
-      <ng-template #participantsLoading> Loading... </ng-template>
+      <ng-template #participantsLoading>
+        <div class="text-center">
+          <div class="spinner-border text-secondary" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+        </div>
+      </ng-template>
     </div>
   </div>
 </div>
@@ -745,7 +784,12 @@
                   }"
                 >
                   <ng-container *ngFor="let message of messageTemplates">
-                    <option value="{{ message }}">{{ message.name }}</option>
+                    <option
+                      value="{{ message.id }}"
+                      selected="selectedActivity.messageCode"
+                    >
+                      {{ message.name }}
+                    </option>
                   </ng-container>
                 </select>
                 <div
@@ -1218,8 +1262,10 @@
   <!---Use content projection !-->
   <div modal-body-content>
     <app-staff-modal
+      #staffModal
       (userSelected)="getSelectedUser($event)"
       id="get-selected-user"
+      [accountType]="selectedUserType"
     >
     </app-staff-modal>
   </div>
@@ -1232,120 +1278,31 @@
   [style.z-index]="firstModalZIndex"
 ></div>
 
-<!--Delete Activity Modal -->
+<!--Delete Modal -->
 <div
   class="modal fade"
-  id="deleteActivityModal"
+  id="deleteModal"
   tabindex="-1"
-  aria-labelledby="deleteActivityModalLabel"
+  aria-labelledby="deleteModalLabel"
   aria-hidden="true"
 >
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header" style="border: none">
-        <h1 class="modal-title fs-5 text-danger" id="deleteActivityModalLabel">
-          Confirm delete!
+        <h1 class="modal-title fs-5 text-danger" id="deleteModalLabel">
+          Confirm {{ activityText | uppercase }} delete!
         </h1>
         <button
           type="button"
           class="btn-close"
           data-bs-dismiss="modal"
           aria-label="Close"
+          #closeDeleteButton
         ></button>
       </div>
       <div class="modal-body">
         <p class="fs-5 text-muted">
-          Are you sure you want to delete the activity?
-        </p>
-      </div>
-      <div class="modal-footer" style="border: none">
-        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
-          Cancel
-        </button>
-        <button
-          type="button"
-          class="btn btn-danger delete-activity"
-          (click)="confirmDeleteActivity()"
-        >
-          Confirm Delete
-        </button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!--Delete Activity Note Modal -->
-<div
-  class="modal fade"
-  id="deleteActivityNoteModal"
-  tabindex="-1"
-  aria-labelledby="deleteActivityNoteModalLabel"
-  aria-hidden="true"
->
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header" style="border: none">
-        <h1
-          class="modal-title fs-5 text-danger"
-          id="deleteActivityNoteModalLabel"
-        >
-          Confirm delete!
-        </h1>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="modal-body">
-        <p class="fs-5 text-muted">
-          Are you sure you want to delete the activity note?
-        </p>
-      </div>
-      <div class="modal-footer" style="border: none">
-        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
-          Cancel
-        </button>
-        <button
-          type="button"
-          class="btn btn-danger"
-          (click)="confirmDeleteActivityNote()"
-        >
-          Confirm Delete
-        </button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!--Delete Activity Task Modal -->
-<div
-  class="modal fade"
-  id="deleteActivityTaskModal"
-  tabindex="-1"
-  aria-labelledby="deleteActivityTaskModalLabel"
-  aria-hidden="true"
->
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header" style="border: none">
-        <h1
-          class="modal-title fs-5 text-danger"
-          id="deleteActivityTaskModalLabel"
-        >
-          Confirm delete!
-        </h1>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="modal-body">
-        <p class="fs-5 text-muted">
-          Are you sure you want to delete the activity task?
+          Are you sure you want to delete the selected {{ activityText }}?
         </p>
       </div>
       <div class="modal-footer" style="border: none">
@@ -1355,7 +1312,7 @@
         <button
           type="button"
           class="btn btn-danger delete-activity-task"
-          (click)="confirmDeleteActivityTask()"
+          (click)="confirmDelete(activityText)"
         >
           Confirm Delete
         </button>
@@ -1363,3 +1320,112 @@
     </div>
   </div>
 </div>
+
+<!-- Related Account modal -->
+<!-- <button
+  type="button"
+  class="btn btn-primary"
+  data-bs-toggle="modal"
+  data-bs-target="#relatedToModal"
+>
+  Related To
+</button> -->
+
+<!-- Modal -->
+<!-- <div
+  class="modal fade"
+  id="relatedToModal"
+  tabindex="-1"
+  aria-labelledby="relatedToModalLabel"
+  aria-hidden="true"
+>
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header border-0">
+        <h1 class="modal-title fs-5 text-dark" id="relatedToModalLabel">
+          Select related user
+        </h1>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="modal-body">
+        <div class="filter-row">
+          <div class="row my-3">
+            <div class="col-sm-5">
+              <select
+                #userType
+                (click)="fetchAccountByAccountType(userType.value)"
+                class="form-select"
+                aria-label="Default select example"
+              >
+                <option selected>Account type</option>
+                <option value="AGENT">Agent</option>
+                <option value="CLIENT">Client</option>
+                <option value="SERVICE_PROVIDER">Service provider</option>
+              </select>
+            </div>
+            <div class="col-sm-5">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="Search by name, email"
+                aria-label="Last name"
+              />
+            </div>
+          </div>
+          <ng-container>
+            <p-table
+              [autoLayout]="true"
+              [rowHover]="true"
+              [resizableColumns]="true"
+              [showCurrentPageReport]="true"
+              [rows]="pageSize || 5"
+              [totalRecords]="accountData?.totalElements"
+              [value]="accountData?.content"
+              [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
+              [paginator]="true"
+              responsiveLayout="stack"
+              [scrollable]="true"
+              [lazy]="true"
+              [loading]="loading"
+              (onLazyLoad)="fetchAccountByAccountType('', $event)"
+              [(selection)]="selectedAccount"
+              selectionMode="single"
+              dataKey="id"
+              scrollHeight="400px"
+              currentPageReportTemplate="{first} - {last} of {totalRecords}"
+            >
+              <ng-template pTemplate="header">
+                <tr>
+                  <th>Name</th>
+                  <th>Email</th>
+                </tr>
+              </ng-template>
+              <ng-template pTemplate="body" let-user>
+                <tr [pSelectableRow]="user">
+                  <td class="p-2">{{ user.firstName }} {{ user.lastName }}</td>
+                  <td>{{ user.emailAddress }}</td>
+                </tr>
+              </ng-template>
+              <ng-template pTemplate="emptymessage">
+                <tr>
+                  <td colspan="3">No User Detail(s) Found.</td>
+                </tr>
+              </ng-template>
+            </p-table>
+          </ng-container>
+        </div>
+      </div>
+      <div class="modal-footer border-0">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">
+          Close
+        </button>
+        <button type="button" class="btn btn-primary">OK</button>
+      </div>
+    </div>
+  </div>
+</div> -->
