--- a/src/app/features/crm/components/activity-management/priority-levels-activity-status/priority-levels-activity-status.component.html
+++ b/src/app/features/crm/components/activity-management/priority-levels-activity-status/priority-levels-activity-status.component.html
@@ -41,57 +41,70 @@
                 >
                   <i class="fa-solid fa-plus"></i>
                 </span>
-                <span class="icon-circle edit-priority-level" (click)="editPriorityLevel()">
+                <span
+                  class="icon-circle edit-priority-level"
+                  (click)="editPriorityLevel()"
+                >
                   <i class="pi pi-pencil"></i>
                 </span>
                 <span
                   class="icon-circle"
                   data-bs-toggle="modal"
-                  data-bs-target="#deletePriorityLevelModal"
+                  data-bs-target="#deleteModal"
+                  (click)="prepareItemForDelete('priority')"
                 >
                   <i class="fa-regular fa-trash-can"></i>
                 </span>
               </div>
             </div>
           </div>
-          <p-table
-            #priorityLevelsTable
-            [autoLayout]="true"
-            [rowHover]="true"
-            [resizableColumns]="true"
-            [showCurrentPageReport]="true"
-            [rows]="pageSize || 5"
-            [totalRecords]="priorityLevelsData?.length"
-            [value]="priorityLevelsData"
-            [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
-            responsiveLayout="stack"
-            [scrollable]="true"
-            [(selection)]="selectedPriorityLevel"
-            selectionMode="single"
-            dataKey="id"
-            scrollHeight="400px"
-            currentPageReportTemplate="{first} - {last} of {totalRecords}"
-            [globalFilterFields]="['description', 'code']"
-          >
-            <ng-template pTemplate="header">
-              <tr>
-                <th pSortableColumn="gis_exception_code">
-                  Description
-                  <p-sortIcon field="gis_exception_code"></p-sortIcon>
-                </th>
-              </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-priorityLevel>
-              <tr [pSelectableRow]="priorityLevel">
-                <td>{{ priorityLevel.desc }}</td>
-              </tr>
-            </ng-template>
-            <ng-template pTemplate="emptymessage">
-              <tr>
-                <td colspan="1">No Priority Level Detail(s) Found.</td>
-              </tr>
-            </ng-template>
-          </p-table>
+          <ng-container *ngIf="isDataLoading.priority; else priorityLoading">
+            <p-table
+              #priorityLevelsTable
+              [autoLayout]="true"
+              [rowHover]="true"
+              [resizableColumns]="true"
+              [showCurrentPageReport]="true"
+              [rows]="pageSize || 5"
+              [totalRecords]="priorityLevelsData?.length"
+              [value]="priorityLevelsData"
+              [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
+              responsiveLayout="stack"
+              [scrollable]="true"
+              [(selection)]="selectedPriorityLevel"
+              selectionMode="single"
+              dataKey="id"
+              scrollHeight="400px"
+              currentPageReportTemplate="{first} - {last} of {totalRecords}"
+              [globalFilterFields]="['description', 'code']"
+            >
+              <ng-template pTemplate="header">
+                <tr>
+                  <th pSortableColumn="gis_exception_code">
+                    Description
+                    <p-sortIcon field="gis_exception_code"></p-sortIcon>
+                  </th>
+                </tr>
+              </ng-template>
+              <ng-template pTemplate="body" let-priorityLevel>
+                <tr [pSelectableRow]="priorityLevel">
+                  <td>{{ priorityLevel.desc }}</td>
+                </tr>
+              </ng-template>
+              <ng-template pTemplate="emptymessage">
+                <tr>
+                  <td colspan="1">No Priority Level Detail(s) Found.</td>
+                </tr>
+              </ng-template>
+            </p-table>
+          </ng-container>
+          <ng-template #priorityLoading>
+            <div class="text-center">
+              <div class="spinner-border text-secondary" role="status">
+                <span class="visually-hidden">Loading...</span>
+              </div>
+            </div>
+          </ng-template>
         </div>
       </div>
     </div>
@@ -105,60 +118,76 @@
 
             <div class="col-sm-12 col-md-6 d-flex justify-content-lg-end">
               <div class="float-end">
-                <span class="icon-circle open-activity-status-modal" (click)="openActivityStatusModal()">
+                <span
+                  class="icon-circle open-activity-status-modal"
+                  (click)="openActivityStatusModal()"
+                >
                   <i class="fa-solid fa-plus"></i>
                 </span>
-                <span class="icon-circle edit-activity-status" (click)="editActivityStatus()">
+                <span
+                  class="icon-circle edit-activity-status"
+                  (click)="editActivityStatus()"
+                >
                   <i class="pi pi-pencil"></i>
                 </span>
                 <span
                   class="icon-circle"
                   data-bs-toggle="modal"
-                  data-bs-target="#deleteActivityStatusModal"
+                  data-bs-target="#deleteModal"
+                  (click)="prepareItemForDelete('status')"
                 >
                   <i class="fa-regular fa-trash-can"></i>
                 </span>
               </div>
             </div>
           </div>
-          <p-table
-            #activityStatusTable
-            [autoLayout]="true"
-            [rowHover]="true"
-            [resizableColumns]="true"
-            [showCurrentPageReport]="true"
-            [rows]="pageSize || 5"
-            [totalRecords]="activityStatusData?.length"
-            [value]="activityStatusData"
-            [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
-            responsiveLayout="stack"
-            [scrollable]="true"
-            [(selection)]="selectedActivityStatus"
-            selectionMode="single"
-            dataKey="id"
-            scrollHeight="400px"
-            currentPageReportTemplate="{first} - {last} of {totalRecords}"
-            [globalFilterFields]="['description', 'code']"
-          >
-            <ng-template pTemplate="header">
-              <tr>
-                <th pSortableColumn="gis_exception_code">
-                  Description
-                  <p-sortIcon field="gis_exception_code"></p-sortIcon>
-                </th>
-              </tr>
-            </ng-template>
-            <ng-template pTemplate="body" let-activityStatus>
-              <tr [pSelectableRow]="activityStatus">
-                <td>{{ activityStatus.desc }}</td>
-              </tr>
-            </ng-template>
-            <ng-template pTemplate="emptymessage">
-              <tr>
-                <td colspan="1">No Activity Status Detail(s) Found.</td>
-              </tr>
-            </ng-template>
-          </p-table>
+          <ng-container *ngIf="isDataLoading.status; else statusLoading">
+            <p-table
+              #activityStatusTable
+              [autoLayout]="true"
+              [rowHover]="true"
+              [resizableColumns]="true"
+              [showCurrentPageReport]="true"
+              [rows]="pageSize || 5"
+              [totalRecords]="activityStatusData?.length"
+              [value]="activityStatusData"
+              [rowsPerPageOptions]="[5, 10, 20, 30, 50, 100]"
+              responsiveLayout="stack"
+              [scrollable]="true"
+              [(selection)]="selectedActivityStatus"
+              selectionMode="single"
+              dataKey="id"
+              scrollHeight="400px"
+              currentPageReportTemplate="{first} - {last} of {totalRecords}"
+              [globalFilterFields]="['description', 'code']"
+            >
+              <ng-template pTemplate="header">
+                <tr>
+                  <th pSortableColumn="gis_exception_code">
+                    Description
+                    <p-sortIcon field="gis_exception_code"></p-sortIcon>
+                  </th>
+                </tr>
+              </ng-template>
+              <ng-template pTemplate="body" let-activityStatus>
+                <tr [pSelectableRow]="activityStatus">
+                  <td>{{ activityStatus.desc }}</td>
+                </tr>
+              </ng-template>
+              <ng-template pTemplate="emptymessage">
+                <tr>
+                  <td colspan="1">No Activity Status Detail(s) Found.</td>
+                </tr>
+              </ng-template>
+            </p-table>
+          </ng-container>
+          <ng-template #statusLoading>
+            <div class="text-center">
+              <div class="spinner-border text-secondary" role="status">
+                <span class="visually-hidden">Loading...</span>
+              </div>
+            </div>
+          </ng-template>
         </div>
       </div>
     </div>
@@ -367,30 +396,31 @@
   </div>
 </div>
 
-<!--Delete Priority Level Modal -->
+<!--Delete Modal -->
 <div
   class="modal fade"
-  id="deletePriorityLevelModal"
+  id="deleteModal"
   tabindex="-1"
-  aria-labelledby="deletePriorityLevelModalLabel"
+  aria-labelledby="deleteModalLabel"
   aria-hidden="true"
 >
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header" style="border: none">
-        <h1 class="modal-title fs-5 text-danger" id="deleteActivityStatusModalLabel">
-          Confirm delete!
+        <h1 class="modal-title fs-5 text-danger" id="deleteModalLabel">
+          Confirm {{ activityText | uppercase }} delete!
         </h1>
         <button
           type="button"
           class="btn-close"
           data-bs-dismiss="modal"
           aria-label="Close"
+          #closeDeleteButton
         ></button>
       </div>
       <div class="modal-body">
         <p class="fs-5 text-muted">
-          Are you sure you want to delete the priority level
+          Are you sure you want to delete the selected {{ activityText }}?
         </p>
       </div>
       <div class="modal-footer" style="border: none">
@@ -399,50 +429,8 @@
         </button>
         <button
           type="button"
-          class="btn btn-danger delete-priority-level"
-          (click)="confirmDeletePriorityLevel()"
-        >
-          Confirm Delete
-        </button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!--Delete Activity Status Modal -->
-<div
-  class="modal fade"
-  id="deleteActivityStatusModal"
-  tabindex="-1"
-  aria-labelledby="deleteActivityStatusModalLabel"
-  aria-hidden="true"
->
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header" style="border: none">
-        <h1 class="modal-title fs-5 text-danger" id="deleteActivityModalLabel">
-          Confirm delete!
-        </h1>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="modal"
-          aria-label="Close"
-        ></button>
-      </div>
-      <div class="modal-body">
-        <p class="fs-5 text-muted">
-          Are you sure you want to delete the activity status?
-        </p>
-      </div>
-      <div class="modal-footer" style="border: none">
-        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
-          Cancel
-        </button>
-        <button
-          type="button"
-          class="btn btn-danger delete-activity-status"
-          (click)="confirmDeleteActivityStatus()"
+          class="btn btn-danger delete-activity-task"
+          (click)="confirmDelete(activityText)"
         >
           Confirm Delete
         </button>
