--- a/src/app/features/entities/components/staff/staff-modal/staff-modal.component.html
+++ b/src/app/features/entities/components/staff/staff-modal/staff-modal.component.html
@@ -1,34 +1,97 @@
-<input type="search" #inputusername name="searchUsername" id="searchUsername" placeholder="Username" (keydown)="handleEnteredValue($event, inputusername.value)" [(ngModel)]="usernameFilter"
-       class="border border-1 border-secondary rounded-1 w-50 h-auto">
-<input type="search" #inputname name="searchName" id="searchName" placeholder="Full Name" (keydown)="handleEnteredValue($event, inputname.value)"
-       class="border border-1 border-secondary  rounded-1 w-50 h-auto">
+<!-- <input
+  type="search"
+  #inputusername
+  name="searchUsername"
+  id="searchUsername"
+  placeholder="Username"
+  (keydown)="handleEnteredValue($event, inputusername.value)"
+  [(ngModel)]="usernameFilter"
+  class="border border-1 border-secondary rounded-1 w-50 h-auto"
+/>
+<input
+  type="search"
+  #inputname
+  name="searchName"
+  id="searchName"
+  placeholder="Full Name"
+  (keydown)="handleEnteredValue($event, inputname.value)"
+  class="border border-1 border-secondary rounded-1 w-50 h-auto"
+/> -->
+
+<div class="row my-3">
+  <div class="col-sm-5">
+    <select
+      #userType
+      (click)="fetchAccountByAccountType(userType.value)"
+      class="form-select"
+      aria-label="Default select example"
+    >
+      <option selected>Account type</option>
+      <option *ngIf="accountType === 'USER'" value="USER">User</option>
+      <ng-container *ngIf="accountType !== 'USER'">
+        <option value="AGENT">Agent</option>
+        <option value="CLIENT">Client</option>
+        <option value="SERVICE_PROVIDER">Service provider</option>
+      </ng-container>
+      <!-- <option value="TEAM">Group User</option> -->
+    </select>
+  </div>
+  <div class="col-sm-5">
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Search by name, email"
+      aria-label="Last name"
+    />
+  </div>
+</div>
 <ng-container *ngIf="isLazyLoaded">
-  <p-table #dt1 (onLazyLoad)="lazyLoadAllUsers($event)"
-           [lazy]="true"
-           [rowHover]="true"
-           [scrollable]="true"
-           [paginator]="true"
-           [rows]="staffSize"
-           [totalRecords]="lazyLoadedUsers?.totalElements"
-           [value]="lazyLoadedUsers?.content"
-           [tableStyle]="{ 'width.%': 100 }"
-           sortMode="single"
-           selectionMode="single"
-           [(selection)]="selectedUser"
-           dataKey="id"
-           styleClass="p-datatable-gridlines users"
-           responsiveLayout="scroll" class='ui-datatable'
-           (onRowSelect)="onUserRowSelect($event)">
+  <p-table
+    #dt1
+    (onLazyLoad)="fetchAccountByAccountType(accountType, $event)"
+    [lazy]="true"
+    [rowHover]="true"
+    [scrollable]="true"
+    [paginator]="true"
+    [showCurrentPageReport]="true"
+    [rows]="staffSize"
+    [totalRecords]="lazyLoadedUsers?.totalElements"
+    [value]="lazyLoadedUsers?.content"
+    [tableStyle]="{ 'width.%': 100 }"
+    sortMode="single"
+    selectionMode="single"
+    [(selection)]="selectedUser"
+    dataKey="id"
+    styleClass="p-datatable-gridlines users"
+    responsiveLayout="scroll"
+    class="ui-datatable"
+    (onRowSelect)="onUserRowSelect($event)"
+    currentPageReportTemplate="{first} - {last} of {totalRecords}"
+  >
     <ng-template pTemplate="header">
-      <tr >
-        <th class="supervisors-table-head">Username</th>
-        <th class="supervisors-table-head">Full Name</th>
+      <tr>
+        <th class="supervisors-table-head">Name</th>
+        <!-- <th class="supervisors-table-head">Username</th>
+        <th class="supervisors-table-head">Full Name</th> -->
+        <th class="supervisors-table-head">Email</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-viewUsers>
       <tr [pSelectableRow]="viewUsers">
-        <td class="body" style="width: 50%">{{viewUsers?.username | titlecase}}</td>
-        <td class="body" style="width: 50%">{{viewUsers?.name | titlecase}}</td>
+        <td class="body" style="width: 50%">
+          {{ viewUsers?.firstName | titlecase }}
+          {{ viewUsers?.lastName | titlecase }}
+          {{ viewUsers?.username | titlecase }}
+        </td>
+        <!-- <td class="body" style="width: 50%">
+          {{ viewUsers?.username | titlecase }}
+        </td>
+        <td class="body" style="width: 50%">
+          {{ viewUsers?.name | titlecase }}
+        </td> -->
+        <td class="body" style="width: 50%">
+          {{ viewUsers?.emailAddress }}
+        </td>
       </tr>
     </ng-template>
     <ng-template pTemplate="emptymessage">
@@ -39,29 +102,33 @@
   </p-table>
 </ng-container>
 <ng-container *ngIf="!isLazyLoaded">
-  <p-table #dt2 [rowHover]="true"
-           [scrollable]="true"
-           [paginator]="true"
-           [rows]="staffSize"
-           [value]="staffList"
-           [tableStyle]="{ 'width.%': 100 }"
-           sortMode="single"
-           selectionMode="single"
-           [(selection)]="selectedUser"
-           dataKey="id"
-           styleClass="p-datatable-gridlines users"
-           responsiveLayout="scroll" class='ui-datatable'
-           (onRowSelect)="onUserRowSelect($event)" >
+  <p-table
+    #dt2
+    [rowHover]="true"
+    [scrollable]="true"
+    [paginator]="true"
+    [rows]="staffSize"
+    [value]="staffList"
+    [tableStyle]="{ 'width.%': 100 }"
+    sortMode="single"
+    selectionMode="single"
+    [(selection)]="selectedUser"
+    dataKey="id"
+    styleClass="p-datatable-gridlines users"
+    responsiveLayout="scroll"
+    class="ui-datatable"
+    (onRowSelect)="onUserRowSelect($event)"
+  >
     <ng-template pTemplate="header">
-      <tr >
+      <tr>
         <th class="supervisors-table-head">Username</th>
         <th class="supervisors-table-head">Full Name</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-viewUsers>
-      <tr [pSelectableRow]="viewUsers">
-        <td class="body w-50">{{viewUsers?.username | titlecase}}</td>
-        <td class="body w-50">{{viewUsers?.name | titlecase}}</td>
+      <tr [pSelectableRow]="viewUsers" (click)="onUserRowSelect(viewUsers)">
+        <td class="body w-50">{{ viewUsers?.username | titlecase }}</td>
+        <td class="body w-50">{{ viewUsers?.name | titlecase }}</td>
       </tr>
     </ng-template>
     <ng-template pTemplate="emptymessage">
@@ -73,8 +140,19 @@
 </ng-container>
 
 <div class="d-block border-top-0" *ngIf="showButtons">
-  <button class="btn btn-primary cancelBtn supervisors-bottom-btn"
-          data-bs-dismiss="modal" aria-label="Close"
-          #cancelUserSelection>Cancel</button>
-  <button class="btn btn-outline-primary float-right reassign supervisors-bottom-btn" aria-label="Close" (click)="saveSelectedUser()">Save</button>
+  <button
+    class="btn btn-primary cancelBtn supervisors-bottom-btn"
+    data-bs-dismiss="modal"
+    aria-label="Close"
+    #cancelUserSelection
+  >
+    Cancel
+  </button>
+  <button
+    class="btn btn-outline-primary float-right reassign supervisors-bottom-btn"
+    aria-label="Close"
+    (click)="saveSelectedUser()"
+  >
+    Save
+  </button>
 </div>
