--- a/src/app/shared/components/dynamic-simple-modal/dynamic-simple-modal.component.html
+++ b/src/app/shared/components/dynamic-simple-modal/dynamic-simple-modal.component.html
@@ -1,12 +1,26 @@
 <!-- Modal -->
-<div class="modal fade" [ngClass]="{ 'show': modalVisible }"
-     tabindex="-1" [style.z-index]="zIndex"
-     role="dialog" aria-labelledby="dynamicModalLabel" aria-hidden="true">
+<div
+  class="modal fade"
+  [ngClass]="{ show: modalVisible }"
+  tabindex="-1"
+  [style.z-index]="zIndex"
+  role="dialog"
+  aria-labelledby="dynamicModalLabel"
+  aria-hidden="true"
+>
   <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="dynamicModalLabel">{{ modalTitle }}</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="emitAction()"></button>
+        <h1 class="modal-title fs-5" id="dynamicModalLabel">
+          {{ modalTitle }}
+        </h1>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+          (click)="emitAction()"
+        ></button>
       </div>
       <div class="modal-body">
         <div *ngIf="!useDynamicContent">{{ modalBody }}</div>
@@ -16,10 +30,18 @@
       </div>
 
       <div class="modal-footer" *ngIf="showModalButtons">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="emitAction()">Close</button>
-        <button type="button" class="btn btn-primary" (click)="emitAction()">{{ modalButtonLabel }}</button>
+        <button
+          type="button"
+          class="btn btn-secondary"
+          data-bs-dismiss="modal"
+          (click)="emitAction()"
+        >
+          Close
+        </button>
+        <button type="button" class="btn btn-primary" (click)="emitAction()">
+          {{ modalButtonLabel }}
+        </button>
       </div>
     </div>
   </div>
 </div>
-
